Improved the layout for the del animation. Issue with IE11 on small screen.

--- a/client/app/main/main.less
+++ b/client/app/main/main.less
@@ -22,6 +22,9 @@
   justify-content: center;
 
   background: #000000;
+
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .page-hdr {
@@ -50,13 +53,17 @@
   });
 }
 
-.event-list-container, .no-events-msg {
+.no-events-msg {
   flex: none;
 }
 
 .event-list-container {
-  overflow-y: auto;
-  overflow-x: hidden;
+  flex: 1;
+
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  justify-content: flex-start;
 }
 
 .no-events-msg {
@@ -65,10 +72,11 @@
 }
 
 .event-panel {
-  min-width: 44rem;
+  flex: none;
+  width: 44rem;
 
   .small({
-    min-width: 10rem !important;
+    width: 20rem !important;
   });
 }
 
